--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -179,9 +179,10 @@
                 <action android:name="com.xiaomi.mipush.ERROR"/>
             </intent-filter>
         </receiver>
-		 <activity android:label="extend" android:name="cn.com.smartdevices.bracelet.ExtendActivity"/>
+        <activity android:label="" android:name="cn.com.smartdevices.bracelet.ExtendActivity"/>
+        <activity android:label="" android:name="cn.com.smartdevices.bracelet.SettingAppActivity"/>
         <provider android:authorities="cn.com.smartdevices.bracelet.extend.AppsSettingProvider" android:exported="true" android:name="cn.com.smartdevices.bracelet.extend.AppsSettingProvider"/>
-        <service android:label="@string/app_name" android:name="cn.com.smartdevices.bracelet.extend.BleNotifycationTask" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+        <service android:label="BleNotificationService" android:name="cn.com.smartdevices.bracelet.extend.BleNotificationService" android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService"/>
             </intent-filter>
